# intel_perceptual_server

./: CMakeLists.txt  README.md  package.xml
include/intel_perceptual_server/: intel_perceptual_server.h
include/pcsdk_util/: util_capture_file.h  util_captureimpl.h  util_pipeline.h  util_pipeline_raw.h  util_pipeline_voice.h
launch/: intel_perceptual_server.launch
res/: intel_perceptual_server.qrc
src/: intel_perceptual_server.cpp  main.cpp  main_window.ui
src/pcsdk_util/: util_capture.cpp  util_capture_file.cpp  util_captureimpl.cpp  util_cmdline.cpp  util_pipeline_face.cpp  util_pipeline_gesture.cpp  util_pipeline_raw.cpp  util_pipeline_voice.cpp  util_render.cpp
