<package>
  <name>intel_perceptual_server</name>
  <version>0.1.0</version>
  <description>intel_perceptual_server</description>
  <maintainer email="mahisorn.w@hiveground.com">Mahisorn Wongphati</maintainer>

  <license>BSD</license>

  <author>Mahisorn Wongphati</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <run_depend>roscpp</run_depend>
  <build_depend>interaction_msgs</build_depend> 
  <run_depend>interaction_msgs</run_depend>
  <build_depend>intel_perceptual_msgs</build_depend> 
  <run_depend>intel_perceptual_msgs</run_depend>
  
</package>